# murefi

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLA.md  README.md  environment-dev.yml  gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cla.yml  pipeline.yml  pre-commit.yml  release.yml
calibr8/: setup.py
calibr8/calibr8/: __init__.py  core.py
calibr8/tests/: tests.py
dependencies/: bletl-0.4-py3-none-any.whl
docs/source/: 01_datastructures.rst  02_models.rst  03_fitting.rst  Example_01_Datastructures.nblink  Example_02_ParameterMapping.nblink  Example_03_MichaelisMenten.nblink  Example_03_ModelFitting.nblink  Example_04_MichaelisMenten_sunode.nblink  conf.py  index.rst  murefi_contrib.rst  murefi_core.rst  murefi_datastructures.rst  murefi_objectives.rst  murefi_ode.rst  murefi_symbolic.rst
examples/: API_ParameterMapping.ipynb  CreateDatasetAndSimpleFit.ipynb  FittingALikelihoodDistribution.ipynb  FittingErrorModelParameter.ipynb  GlucoseSensorFitting.ipynb
murefi/: PDF.py  __init__.py  core.py  datastructures.py  datatypes.py  objectives.py  ode.py  parameter_mapping.py  setup.py  symbolic.py  test_core.py  tests.py
murefi/calibr8/: __init__.py
notebooks/: CreateDatasetAndSimpleFit.ipynb  Example_01_DataStructures.ipynb  Example_02_ParameterMapping.ipynb  Example_04_MichaelisMenten_sunode.ipynb  Example_MichaelisMentenKinetics.ipynb  Example_MichaelisMentenKinetics_sunode.ipynb  FittingErrorModelParameter.ipynb  GlucoseSensorFitting.ipynb  README.md
tests/: tests.py
(+40 files in other folders)
