[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "murefi"
version = "5.4.0"
description = "Toolbox for multiple replicate fitting and Bayesian modeling."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Michael Osthege", email = "m.osthege@fz-juelich.de"},
    {name = "Laura Helleckes", email = "l.helleckes@fz-juelich.de"},
]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "calibr8>=7.0.0",
    "h5py",
    "numpy",
    "pandas",
    "scipy",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/jubiotech/murefi"
Documentation = "https://murefi.readthedocs.io/en/latest/"
Download = "https://pypi.org/project/murefi/"

[tool.setuptools]
package-dir = {"murefi" = "murefi"}

[tool.setuptools.package-data]
"murefi" = ["py.typed"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'test_.*?\.py$',
]
